--- a/01/index.html
+++ b/01/index.html
@@ -4,8 +4,144 @@
     <meta charset="utf-8">
     <meta name="author" content="Frankgan0402">
     <title>01 - 測試</title>
+    <link rel=" stylesheet" as="style" href="./style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body>
-    測試一下有沒有中文
+  <body id="app">
+    
+    <h1>個人系統</h1>
+
+    <!-- 系統界面預覽 -->
+    <section class="system-container">
+
+      <div class="system-box">
+
+        <!-- Icon -->
+        <div class="icon">
+          <i class="material-icons">attach_money</i>
+          <p class="system-name">
+            記賬系統
+          </p>
+        </div>
+
+        <div class="system-info">
+          <p class="system-description">
+            整合財務記錄，<br>
+            可以生成季度報表、docx、xlsx、csv 和 sql 檔案。<br>
+            讓您輕鬆追蹤您的資金流。
+          </p>
+        </div>
+
+      </div>
+
+      <div class="system-box">
+
+        <!-- Icon -->
+        <div class="icon">
+          <i class="material-icons fa fa-sitemap"></i>
+          <p class="system-name">
+            個人財務管理系統
+          </p>
+        </div>
+
+        <div class="system-info">
+          <p class="system-description">
+            通過使用 barcode，追蹤您的個人資產。<br>
+            并且可以直接使用掃碼功能來確定您的資產。
+          </p>
+        </div>
+
+      </div>
+
+      <div class="system-box">
+
+        <!-- Icon -->
+        <div class="icon">
+          <i class="material-icons fa fa-calendar"></i>
+          <p class="system-name">
+            事件和日常安排
+          </p>
+        </div>
+
+        <div class="system-info">
+          <p class="system-description">
+            整合 google map 和 google calendar，<br>
+            可以讓你快速查看你最近的日程安排，<br>
+            并且可以直接連接到 google map 來自動導航。
+          </p>
+        </div>
+
+      </div>
+
+      <div class="system-box">
+
+        <!-- Icon -->
+        <div class="icon">
+          <i class="material-icons fa fas fa-cloud"></i>
+          <p class="system-name">
+            遠程儲存空間
+          </p>
+        </div>
+
+        <div class="system-info">
+          <p class="system-description">
+            你可以通過登入私有云端存儲你的資料<br>
+            而不需要隨身携帶隨身碟。
+          </p>
+        </div>
+
+      </div>
+
+    </section>
+
+    <!-- 登入選項 -->
+    <h2 class="login-title">登入選項</h2>
+
+    <section class="options-container">
+
+      <div class="options-box">
+        <div class="options-icon">
+          <i class="material-icons">fingerprint</i>
+        </div>
+        <p class="options-name">指紋登入</p>
+      </div>
+
+      <div class="options-box">
+        <div class="options-icon">
+          <i class="fa fa-google"></i>
+        </div>
+        <p class="options-name">谷歌登入</p>
+      </div>
+
+      <div class="options-box">
+        <div class="options-icon">
+          <i class="fa fa-facebook"></i>
+        </div>
+        <p class="options-name">臉書登入</p>
+      </div>
+
+      <div class="options-box">
+        <div class="options-icon">
+          <i class="fa fas fa-id-card"></i>
+        </div>
+        <p class="options-name">刷卡登入</p>
+      </div>
+
+      <div class="options-box">
+        <div class="options-icon">
+          <i class="fa fas fa-key"></i>
+        </div>
+        <p class="options-name">密碼登入</p>
+      </div>
+
+    </section>
+
+    <div class="footer">
+      技術開發：顏循禮<br>
+      <a href="https://github.frankgan.com">一個網頁全端工程師</a>
+    </div>
+
   </body>
+  <script defer src="./script.js"></script>
 </html>
