--- a/01/index.html
+++ b/01/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="author" content="Frankgan0402">
-    <title>01 - 測試</title>
+    <title>01 - 個人系統</title>
     <link rel=" stylesheet" as="style" href="./style.css">
+    <link rel=" stylesheet" as="style" href="./__reset.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -15,25 +16,27 @@
     <!-- 系統界面預覽 -->
     <section class="system-container">
 
-      <div class="system-box">
+      <a href="./pages/accounting.html">
+        <div class="system-box">
 
-        <!-- Icon -->
-        <div class="icon">
-          <i class="material-icons">attach_money</i>
-          <p class="system-name">
-            記賬系統
-          </p>
+          <!-- Icon -->
+          <div class="icon">
+            <i class="material-icons">attach_money</i>
+            <p class="system-name">
+              記賬系統
+            </p>
+          </div>
+
+          <div class="system-info">
+            <p class="system-description">
+              整合財務記錄，<br>
+              可以生成季度報表、docx、xlsx、csv 和 sql 檔案。<br>
+              讓您輕鬆追蹤您的資金流。
+            </p>
+          </div>
+        
         </div>
-
-        <div class="system-info">
-          <p class="system-description">
-            整合財務記錄，<br>
-            可以生成季度報表、docx、xlsx、csv 和 sql 檔案。<br>
-            讓您輕鬆追蹤您的資金流。
-          </p>
-        </div>
-
-      </div>
+      </a>
 
       <div class="system-box">
 
