--- a/01/index.html
+++ b/01/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Frankgan0402">
     <title>01 - 個人系統</title>
     <link rel=" stylesheet" as="style" href="./style.css">
-    <link rel=" stylesheet" as="style" href="./__reset.css">
+    <link rel=" stylesheet" as="style" href="./reset.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
