:wrench: update content

--- a/01/index.html
+++ b/01/index.html
@@ -16,7 +16,7 @@
     <!-- 系統界面預覽 -->
     <section class="system-container">
 
-      <a href="./pages/accounting.html">
+      <a href="./auth.html">
         <div class="system-box">
 
           <!-- Icon -->
@@ -38,63 +38,69 @@
         </div>
       </a>
 
-      <div class="system-box">
+      <a href="./auth.html">
+        <div class="system-box">
 
-        <!-- Icon -->
-        <div class="icon">
-          <i class="material-icons fa fa-sitemap"></i>
-          <p class="system-name">
-            個人財務管理系統
-          </p>
+          <!-- Icon -->
+          <div class="icon">
+            <i class="material-icons fa fa-sitemap"></i>
+            <p class="system-name">
+              個人財務管理系統
+            </p>
+          </div>
+
+          <div class="system-info">
+            <p class="system-description">
+              通過使用 barcode，追蹤您的個人資產。<br>
+              并且可以直接使用掃碼功能來確定您的資產。
+            </p>
+          </div>
+
         </div>
+      </a>
 
-        <div class="system-info">
-          <p class="system-description">
-            通過使用 barcode，追蹤您的個人資產。<br>
-            并且可以直接使用掃碼功能來確定您的資產。
-          </p>
+      <a href="./auth.html">
+        <div class="system-box">
+
+          <!-- Icon -->
+          <div class="icon">
+            <i class="material-icons fa fa-calendar"></i>
+            <p class="system-name">
+              事件和日常安排
+            </p>
+          </div>
+
+          <div class="system-info">
+            <p class="system-description">
+              整合 google map 和 google calendar，<br>
+              可以讓你快速查看你最近的日程安排，<br>
+              并且可以直接連接到 google map 來自動導航。
+            </p>
+          </div>
+
         </div>
+      </a>
 
-      </div>
+      <a href="./auth.html">
+        <div class="system-box">
 
-      <div class="system-box">
+          <!-- Icon -->
+          <div class="icon">
+            <i class="material-icons fa fas fa-cloud"></i>
+            <p class="system-name">
+              遠程儲存空間
+            </p>
+          </div>
 
-        <!-- Icon -->
-        <div class="icon">
-          <i class="material-icons fa fa-calendar"></i>
-          <p class="system-name">
-            事件和日常安排
-          </p>
+          <div class="system-info">
+            <p class="system-description">
+              你可以通過登入私有云端存儲你的資料<br>
+              而不需要隨身携帶隨身碟。
+            </p>
+          </div>
+
         </div>
-
-        <div class="system-info">
-          <p class="system-description">
-            整合 google map 和 google calendar，<br>
-            可以讓你快速查看你最近的日程安排，<br>
-            并且可以直接連接到 google map 來自動導航。
-          </p>
-        </div>
-
-      </div>
-
-      <div class="system-box">
-
-        <!-- Icon -->
-        <div class="icon">
-          <i class="material-icons fa fas fa-cloud"></i>
-          <p class="system-name">
-            遠程儲存空間
-          </p>
-        </div>
-
-        <div class="system-info">
-          <p class="system-description">
-            你可以通過登入私有云端存儲你的資料<br>
-            而不需要隨身携帶隨身碟。
-          </p>
-        </div>
-
-      </div>
+      </a>
 
     </section>
 
@@ -103,40 +109,49 @@
 
     <section class="options-container">
 
-      <div class="options-box">
-        <div class="options-icon">
-          <i class="material-icons">fingerprint</i>
+      <!-- Fingerprint -->
+      <a href="./auth/fingerprint.html"
+        <div class="options-box">
+          <div class="options-icon">
+            <i class="material-icons">fingerprint</i>
+          </div>
+          <p class="options-name">指紋登入</p>
         </div>
-        <p class="options-name">指紋登入</p>
-      </div>
+      </a>
 
-      <div class="options-box">
+      <!-- Google -->
+      <!-- <div class="options-box">
         <div class="options-icon">
           <i class="fa fa-google"></i>
         </div>
         <p class="options-name">谷歌登入</p>
-      </div>
+      </div> -->
 
-      <div class="options-box">
+      <!-- Facebook -->
+      <!-- <div class="options-box">
         <div class="options-icon">
           <i class="fa fa-facebook"></i>
         </div>
         <p class="options-name">臉書登入</p>
-      </div>
+      </div> -->
 
-      <div class="options-box">
-        <div class="options-icon">
-          <i class="fa fas fa-id-card"></i>
+      <!-- ID Card -->
+      <a href="./auth/id-card.html">
+        <div class="options-box">
+          <div class="options-icon">
+            <i class="fa fas fa-id-card"></i>
+          </div>
+          <p class="options-name">刷卡登入</p>
         </div>
-        <p class="options-name">刷卡登入</p>
-      </div>
+      </a>
 
-      <div class="options-box">
+      <!-- Password -->
+      <!-- <div class="options-box">
         <div class="options-icon">
           <i class="fa fas fa-key"></i>
         </div>
         <p class="options-name">密碼登入</p>
-      </div>
+      </div> -->
 
     </section>
 
